[package]
name = "retroqwest"
version = "0.0.1-alpha.2"
edition = "2018"
description = "A reqwest REST client generator."
repository = "https://github.com/jakeswenson/retroqwest"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]

[features]
derive = ["retroqwest-derive"]
json = ["reqwest/json"]
default = ["derive", "json"]

[dependencies]
async-trait = "0"
thiserror = "1.0"
reqwest = "0.11"

[dependencies.retroqwest-derive]
version = "^0.0.1-alpha.1"
path = "retroqwest-derive"
optional = true

[dev-dependencies]
wiremock = "0.5.7"
tokio = { version = "1", features = ["full"] }

[dev-dependencies.serde]
version = "1.0"
features = ["derive"]

[workspace]
members = ["retroqwest-derive"]
