[package]
name = "retroqwest-derive"
version = "0.0.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
quote = "1.0.9"
async-trait = "0"
proc-macro2 = "1.0.29"
thiserror = "1.0"

[dependencies.reqwest]
version = "0.11"
features = ["json"]

[dependencies.syn]
version = "1.0"
features = ["full", "visit-mut", "printing", "extra-traits"]

[dev-dependencies]
wiremock = "0.5.7"
tokio = { version = "1", features = ["full"] }

[dev-dependencies.serde]
version = "1.0"
features = ["derive"]
